--- a/TychoClient/TychoClient/TychoClient/Views/AboutPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/AboutPage.xaml
@@ -32,10 +32,21 @@
         </StackLayout>-->
         <ScrollView Grid.Row="1">
             <StackLayout Orientation="Vertical" Padding="16,16,16,40" Spacing="10">
-                <Button Margin="0,10,0,0" Text="READ FREELOADER/TYCHO TAG"
+                <StackLayout Orientation="Horizontal">
+                    <Button Margin="0,10,0,0" Text="READ TAG"
                         Command="{Binding ReadTagCommand}"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
+                    <Button Margin="0,10,0,0" Text="INCREMENT 1st BYTE"
+                        Command="{Binding IncrementValueCommand}"
+                        BackgroundColor="{StaticResource Primary}"
+                        TextColor="White" />
+                    <Button Margin="0,10,0,0" Text="WRITE TAG"
+                        Command="{Binding WriteToTagCommand}"
+                        BackgroundColor="{StaticResource Primary}"
+                        TextColor="White" />
+                </StackLayout>
+                
                 <Label>
                     <Label.FormattedText>
                         <FormattedString>
