--- a/TychoClient/TychoClient/TychoClient/Views/LoginPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/LoginPage.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TychoClient.Views.AboutPage"
+             x:Class="TychoClient.Views.LoginPage"
              xmlns:vm="clr-namespace:TychoClient.ViewModels"
              Title="{Binding Title}">
     
     <ContentPage.BindingContext>
-        <vm:AboutViewModel />
+        <vm:LoginViewModel />
     </ContentPage.BindingContext>
 
     <ContentPage.Resources>
@@ -23,13 +23,6 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <!--<StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
-                <ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
-                    <Image Source="xamarin_logo.png" VerticalOptions="Center" HeightRequest="64" />
-                </ContentView>
-            </StackLayout>
-        </StackLayout>-->
         <ScrollView Grid.Row="1">
             <StackLayout Orientation="Vertical" Padding="16,16,16,40" Spacing="10">
                 <StackLayout Orientation="Horizontal">
