--- a/TychoClient/TychoClient/TychoClient/Views/MainPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/MainPage.xaml
@@ -16,7 +16,7 @@
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:ItemsPage />
+                <views:NewsPage />
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
