--- a/TychoClient/TychoClient/TychoClient/Views/BarScannerPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/BarScannerPage.xaml
@@ -20,38 +20,45 @@
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ScrollView Grid.Row="1">
-            <StackLayout Orientation="Vertical" Padding="16,16,16,40" Spacing="10">
-                <StackLayout Orientation="Horizontal">
-                    <Button Margin="0,10,0,0" Text="READ TAG"
+
+        <Button Grid.Row="0" Text="1" FontSize="40" Command="{Binding IncrementByOneCommand}"/>
+
+        <Label Grid.Row="1" Text="{Binding CustomerName}" />
+
+        <Button Grid.Row="2" Text="4" FontSize="40" Command="{Binding IncrementByFourCommand}"/>
+
+
+        <!--<StackLayout Orientation="Vertical" Padding="16,16,16,40" Spacing="10">
+            <StackLayout Orientation="Horizontal">
+                <Button Margin="0,10,0,0" Text="READ TAG"
                         Command="{Binding ReadTagCommand}"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
-                    <Button Margin="0,10,0,0" Text="INCREMENT 1st BYTE"
+                <Button Margin="0,10,0,0" Text="INCREMENT 1st BYTE"
                         Command="{Binding IncrementValueCommand}"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
-                    <Button Margin="0,10,0,0" Text="WRITE TAG"
+                <Button Margin="0,10,0,0" Text="WRITE TAG"
                         Command="{Binding WriteToTagCommand}"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" />
-                </StackLayout>
-                
-                <Label>
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="Some read data: " />
-                                <Span Text="{Binding SomeData}" />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Label Text="{Binding SomeData}"/>
             </StackLayout>
-        </ScrollView>
+
+            <Label>
+                <Label.FormattedText>
+                    <FormattedString>
+                        <FormattedString.Spans>
+                            <Span Text="Some read data: " />
+                            <Span Text="{Binding SomeData}" />
+                        </FormattedString.Spans>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+            <Label Text="{Binding SomeData}"/>
+        </StackLayout>-->
     </Grid>
 </ContentPage>
