--- a/TychoClient/TychoClient/TychoClient/Views/ReadCardPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/ReadCardPage.xaml
@@ -23,34 +23,56 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ScrollView Grid.Row="1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Button Text="Write to chip" Command="{Binding WriteToTagCommand}"/>
+        <Button Text="Clear" BackgroundColor="Red" Command="{Binding ClearFormCommand}" Grid.Column="1"/>
+
+        <ScrollView Grid.Row="1" Grid.ColumnSpan="2">
             <StackLayout Orientation="Vertical" Padding="16,16,16,40" Spacing="10">
-                <StackLayout Orientation="Horizontal">
-                    <Button Margin="0,10,0,0" Text="READ TAG"
-                        Command="{Binding ReadTagCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
-                    <Button Margin="0,10,0,0" Text="INCREMENT 1st BYTE"
-                        Command="{Binding IncrementValueCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
-                    <Button Margin="0,10,0,0" Text="WRITE TAG"
-                        Command="{Binding WriteToTagCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
-                </StackLayout>
+                <Label Text="Chip UID"/>
+                <Label Text="{Binding ChipUid}"/>
+
+                <Label Text="Name"/>
+                <Editor Text="{Binding CustomerName}"/>
                 
-                <Label>
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="Some read data: " />
-                                <Span Text="{Binding SomeData}" />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Label Text="{Binding SomeData}"/>
+                <Label Text="Transaction ID"/>
+                <Editor Text="{Binding TransactionId}"/>
+
+                <Label Text="Available Drinks"/>
+                <Editor Text="{Binding AvailableDrinks}"/>
+
+                <Label Text="Spent Drinks"/>
+                <Editor Text="{Binding SpentAlcoholTokens}"/>
+
+                <Label Text="Checksum"/>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Text="{Binding Checksum}"/>
+                    <Button Text="Calculate checksum" Grid.Column="1"/>
+                </Grid>
+
+                <Label Text="Collapsed history"/>
+                <Editor Text="{Binding CollapsedHistory}"/>
+
+                <ListView ItemsSource="{Binding Transactions}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="{Binding Sum}"/>
+                                <Label TabIndex="{Binding PartnerByteId}"/>
+                            </StackLayout>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+
+
             </StackLayout>
         </ScrollView>
     </Grid>
