--- a/TychoClient/TychoClient/TychoClient/Views/ReadCardPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/ReadCardPage.xaml
@@ -15,44 +15,47 @@
             <Color x:Key="Primary">#2196F3</Color>
             <Color x:Key="Accent">#96d1ff</Color>
             <Color x:Key="LightTextColor">#999999</Color>
+
+            <Thickness x:Key="DistanceLabel" Bottom="-10" Top="10">
+            </Thickness>
         </ResourceDictionary>
     </ContentPage.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Button Text="Write to chip" Command="{Binding WriteToTagCommand}"/>
-        <Button Text="Clear" BackgroundColor="Red" Command="{Binding ClearFormCommand}" Grid.Column="1"/>
+        <Button Text="Write to chip" Command="{Binding WriteToTagCommand}" IsVisible="{Binding Editable}" Margin="0"/>
+        <Button Text="Clear" BackgroundColor="Red"  Command="{Binding ClearFormCommand}" Grid.Column="1" Margin="0,6,6,0"/>
 
         <ScrollView Grid.Row="1" Grid.ColumnSpan="2">
             <StackLayout Orientation="Vertical" Padding="16,16,16,40" Spacing="10">
-                <Label Text="Chip UID"/>
+                <Label Text="Chip UID"  Margin="{StaticResource DistanceLabel}"/>
                 <Label Text="{Binding ChipUid}"/>
 
-                <Label Text="Name"/>
-                <Editor Text="{Binding CustomerName}"/>
-                
-                <Label Text="Transaction ID"/>
-                <Editor Text="{Binding TransactionId}"/>
+                <Label Text="Name"  Margin="{StaticResource DistanceLabel}"/>
+                <Entry Text="{Binding CustomerName}" IsEnabled="{Binding Editable}"/>
 
-                <Label Text="Available Drinks"/>
-                <Editor Text="{Binding AvailableDrinks}"/>
+                <Label Text="Transaction ID"  Margin="{StaticResource DistanceLabel}"/>
+                <Entry Text="{Binding TransactionId}" IsEnabled="{Binding Editable}"/>
 
-                <Label Text="Spent Drinks"/>
-                <Editor Text="{Binding SpentAlcoholTokens}"/>
+                <Label Text="Available Drinks"  Margin="{StaticResource DistanceLabel}"/>
+                <Entry Text="{Binding AvailableDrinks}" IsEnabled="{Binding Editable}"/>
 
-                <Label Text="Checksum"/>
+                <Label Text="Spent Drinks"  Margin="{StaticResource DistanceLabel}"/>
+                <Entry Text="{Binding SpentAlcoholTokens}" IsEnabled="{Binding Editable}"/>
+
+                <Label Text="Checksum"  Margin="{StaticResource DistanceLabel}"/>
                 <Label Text="{Binding Checksum}"/>
 
-                <Label Text="Collapsed history"/>
-                <Editor Text="{Binding CollapsedHistory}"/>
+                <Label Text="Collapsed history"  Margin="{StaticResource DistanceLabel}"/>
+                <Entry Text="{Binding CollapsedHistory}" IsEnabled="{Binding Editable}"/>
 
                 <ListView ItemsSource="{Binding Transactions}">
                     <ListView.ItemTemplate>
