--- a/TychoClient/TychoClient/TychoClient/Views/BarScannerPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/BarScannerPage.xaml
@@ -15,50 +15,115 @@
             <Color x:Key="Primary">#2196F3</Color>
             <Color x:Key="Accent">#96d1ff</Color>
             <Color x:Key="LightTextColor">#999999</Color>
+
+            <Style TargetType="{x:Type Label}">
+                <Setter Property="FontSize" Value="Large"/>
+            </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
 
+    <ContentPage.Triggers>
+        <DataTrigger TargetType="{x:Type ContentPage}" Binding="{Binding PaymentSucceeded}" Value="True">
+            <Setter Property="BackgroundColor" Value="Green"/>
+        </DataTrigger>
+        <DataTrigger TargetType="{x:Type ContentPage}" Binding="{Binding PaymentRejected}" Value="True">
+            <Setter Property="BackgroundColor" Value="Red"/>
+        </DataTrigger>
+    </ContentPage.Triggers>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+        
 
-        <Button Grid.Row="0" Text="1" FontSize="40" Command="{Binding IncrementByOneCommand}"/>
-
-        <Label Grid.Row="1" Text="{Binding CustomerName}" />
-
-        <Button Grid.Row="2" Text="4" FontSize="40" Command="{Binding IncrementByFourCommand}"/>
+        <Button Grid.Row="0" Text="+1" FontSize="40" Command="{Binding IncrementByOneCommand}"/>
 
 
-        <!--<StackLayout Orientation="Vertical" Padding="16,16,16,40" Spacing="10">
-            <StackLayout Orientation="Horizontal">
-                <Button Margin="0,10,0,0" Text="READ TAG"
-                        Command="{Binding ReadTagCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
-                <Button Margin="0,10,0,0" Text="INCREMENT 1st BYTE"
-                        Command="{Binding IncrementValueCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
-                <Button Margin="0,10,0,0" Text="WRITE TAG"
-                        Command="{Binding WriteToTagCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
-            </StackLayout>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
-            <Label>
-                <Label.FormattedText>
-                    <FormattedString>
-                        <FormattedString.Spans>
-                            <Span Text="Some read data: " />
-                            <Span Text="{Binding SomeData}" />
-                        </FormattedString.Spans>
-                    </FormattedString>
-                </Label.FormattedText>
+            <Label FontSize="Large" Margin="0,0,0,0" IsVisible="False">
+                <Label.Style>
+                    <Style TargetType="{x:Type Label}">
+                        <Style.Triggers>
+                            <DataTrigger TargetType="{x:Type Label}" Binding="{Binding PaymentSucceeded}" Value="True">
+                                <Setter Property="BackgroundColor" Value="LightGreen"/>
+                                <Setter Property="Text" Value="Thanks,  "/>
+                                <Setter Property="IsVisible" Value="True"/>
+                            </DataTrigger>
+                            <DataTrigger TargetType="{x:Type Label}" Binding="{Binding PaymentRejected}" Value="True">
+                                <Setter Property="BackgroundColor" Value="Pink"/>
+                                <Setter Property="Text" Value="Sorry, no more for you,  "/>
+                                <Setter Property="IsVisible" Value="True"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Label.Style>
             </Label>
-            <Label Text="{Binding SomeData}"/>
-        </StackLayout>-->
+
+            <Label Text="{Binding CustomerName}" Grid.Column="1"  FontSize="Large" Margin="-10,0,0,0" LineBreakMode="WordWrap" IsVisible="False">
+                <Label.Style>
+                    <Style TargetType="{x:Type Label}">
+                        <Style.Triggers>
+                            <DataTrigger TargetType="{x:Type Label}" Binding="{Binding PaymentSucceeded}" Value="True">
+                                <Setter Property="BackgroundColor" Value="LightGreen"/>
+                                <Setter Property="IsVisible" Value="True"/>
+                            </DataTrigger>
+                            <DataTrigger TargetType="{x:Type Label}" Binding="{Binding PaymentRejected}" Value="True">
+                                <Setter Property="BackgroundColor" Value="Pink"/>
+                                <Setter Property="IsVisible" Value="True"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Label.Style>
+            </Label>
+
+            <Label FontSize="Large"  Grid.Row="1" Text="Charging">
+                <Label.Style>
+                    <Style TargetType="{x:Type Label}">
+                        <Style.Triggers>
+                            <DataTrigger TargetType="{x:Type Label}" Binding="{Binding PaymentSucceeded}" Value="True">
+                                <Setter Property="IsVisible" Value="False"/>
+                            </DataTrigger>
+                            <DataTrigger TargetType="{x:Type Label}" Binding="{Binding PaymentRejected}" Value="True">
+                                <Setter Property="IsVisible" Value="False"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Label.Style>
+            </Label>
+
+            <Label FontSize="Large" Grid.Row="1" Text="{Binding TokensToBeCharged}" Grid.Column="1">
+                <Label.Style>
+                    <Style TargetType="{x:Type Label}">
+                        <Style.Triggers>
+                            <DataTrigger TargetType="{x:Type Label}" Binding="{Binding PaymentSucceeded}" Value="True">
+                                <Setter Property="IsVisible" Value="False"/>
+                            </DataTrigger>
+                            <DataTrigger TargetType="{x:Type Label}" Binding="{Binding PaymentRejected}" Value="True">
+                                <Setter Property="IsVisible" Value="False"/>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Label.Style>
+            </Label>
+
+        </Grid>
+
+        
+
+        <Button Grid.Row="2" Text="+4" FontSize="40" Command="{Binding IncrementByFourCommand}"/>
+
+
     </Grid>
 </ContentPage>
