--- a/TychoClient/TychoClient/TychoClient/Views/TransactionPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/TransactionPage.xaml
@@ -16,42 +16,38 @@
             <Color x:Key="Accent">#96d1ff</Color>
             <Color x:Key="LightTextColor">#999999</Color>
         </ResourceDictionary>
+
+        <Style TargetType="{x:Type Button}" x:Key="ButtonStyle">
+            <Style.Triggers>
+                <DataTrigger TargetType="{x:Type Button}" Binding="{Binding State}" Value="WaitingForInput">
+                    <Setter Property="Text" Value="Start transaction now"/>
+                    <Setter Property="Command" Value="{Binding StartTransactionCommand}"/>
+                    <Setter Property="BackgroundColor" Value="Gray"/>
+                </DataTrigger>
+                <DataTrigger TargetType="{x:Type Button}" Binding="{Binding State}" Value="Finished">
+                    <Setter Property="Text" Value="Ok"/>
+                    <Setter Property="Command" Value="{Binding FinishAcknowledgedCommand}"/>
+                    <Setter Property="BackgroundColor" Value="Gray"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
     </ContentPage.Resources>
+    
+    
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ScrollView Grid.Row="1">
-            <StackLayout Orientation="Vertical" Padding="16,16,16,40" Spacing="10">
-                <StackLayout Orientation="Horizontal">
-                    <Button Margin="0,10,0,0" Text="READ TAG"
-                        Command="{Binding ReadTagCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
-                    <Button Margin="0,10,0,0" Text="INCREMENT 1st BYTE"
-                        Command="{Binding IncrementValueCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
-                    <Button Margin="0,10,0,0" Text="WRITE TAG"
-                        Command="{Binding WriteToTagCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
-                </StackLayout>
-                
-                <Label>
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="Some read data: " />
-                                <Span Text="{Binding SomeData}" />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Label Text="{Binding SomeData}"/>
-            </StackLayout>
-        </ScrollView>
+
+        <Label Text="{Binding Prompt}"/>
+        
+        <Button Grid.Row="1" Style="{StaticResource ButtonStyle}" Text="ABORT TRANSACTION" BackgroundColor="Red" Command="{Binding AbortTransactionCommand}"/>
+
+        <Entry Text="{Binding Amount}" Keyboard="Numeric" Placeholder="Amount"/>
+
+        <ScrollView Grid.Row="2"></ScrollView>
     </Grid>
 </ContentPage>
