--- a/TychoClient/TychoClient/TychoClient/Views/MenuPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/MenuPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TychoClient.Views.MenuPage"
-             Title="Menu">
+             xmlns:att="clr-namespace:TychoClient.AttachedProperties"
+             Title="Menu" BackgroundColor="#00000000">
+
     <StackLayout VerticalOptions="FillAndExpand">
         <Label x:Name="greetingLabel" FontSize="Large"/>
         <ListView x:Name="ListViewMenu"
@@ -10,8 +12,19 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell x:Name="ViewCell">
-                        <Grid Padding="10" IsVisible="{Binding IsVisible}">
-                            <Label Text="{Binding Title}" FontSize="20"/>
+                        <Grid Padding="3" IsVisible="{Binding IsVisible}" BackgroundColor="#00000000">
+                            <Frame CornerRadius="15" BorderColor="Orange" att:Attached.HasShadow="True" BackgroundColor="Black" >
+                                <Label Text="{Binding Title}" FontSize="22"/>
+                                <Frame.Style>
+                                    <Style TargetType="{x:Type Frame}">
+                                        <Style.Triggers>
+                                            <DataTrigger TargetType="{x:Type Frame}" Binding="{Binding IsSelected}" Value="True">
+                                                <Setter Property="BackgroundColor" Value="#332b12"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Frame.Style>
+                            </Frame>
                             <Grid.Style>
                                 <Style TargetType="{x:Type Grid}">
                                     <Style.Triggers>
