--- a/TychoClient/TychoClient/TychoClient/Views/NewsPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/NewsPage.xaml
@@ -3,20 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TychoClient.Views.NewsPage"
              xmlns:vm="clr-namespace:TychoClient.ViewModels"
+             Style="{StaticResource Style.ContentPage.Default}"
              Title="{Binding Title}">
     
     <ContentPage.BindingContext>
         <vm:NewsViewModel />
     </ContentPage.BindingContext>
 
-    <NavigationPage.TitleView>
-        <Grid>
-            <!--https://medium.com/@prateekrm/custom-navigation-bar-with-controltemplate-in-xamarin-forms-7f61e05ebc14-->
-            <Label Text="{Binding Title}"
-                   TextColor="White" FontSize="Large" />
-        </Grid>
-    </NavigationPage.TitleView>
-
+    
     <ContentPage.Resources>
         <ResourceDictionary>
             <!--Page Level Resources: Compatible with Xamarin Live Player -->
