--- a/TychoClient/TychoClient/TychoClient/Views/LoginPage.xaml
+++ b/TychoClient/TychoClient/TychoClient/Views/LoginPage.xaml
@@ -20,11 +20,18 @@
     </ContentPage.Resources>
 
     <StackLayout>
-        <Entry Text="{Binding UserName}" Placeholder="Username"/>
+        <Entry Text="{Binding UserName}" Placeholder="Username" IsVisible="{Binding IsLoggedIn, Converter={StaticResource InvertBoolConverter}}"/>
 
-        <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Password"/>
+        <Entry Text="{Binding Password}" IsPassword="True" Placeholder="Password" IsVisible="{Binding IsLoggedIn, Converter={StaticResource InvertBoolConverter}}"/>
 
-        <Button Text="Login" Command="{Binding LoginCommand}"/>
+        <Button Text="Login" Command="{Binding LoginCommand}" IsVisible="{Binding IsLoggedIn, Converter={StaticResource InvertBoolConverter}}"/>
+
+        <StackLayout Orientation="Horizontal">
+            <Label Text="Logged in as" IsVisible="{Binding IsLoggedIn}"/>
+            <Label Text="{Binding UserName}" IsVisible="{Binding IsLoggedIn}"/>
+        </StackLayout>
+
+        <Button Text="Logout" Command="{Binding LoginCommand}" IsVisible="{Binding IsLoggedIn}"/>
 
     </StackLayout>
 </ContentPage>
